# webmodul2_HW

./: Dockerfile  Dockerfile.py  README.md  pyproject.toml  requirements.txt
